@@ -256,6 +256,11 @@
             android:key="fbinput"
             android:summary="@string/fbinput"
             android:title="@string/title_fbinput_preference" />
+        <CheckBoxPreference
+            android:defaultValue="@string/fbandroid"
+            android:key="fbandroid"
+            android:summary="@string/summary_fbandroid_preference"
+            android:title="@string/title_fbandroid_preference" />
     </PreferenceCategory>
 
 </PreferenceScreen>
